# satteri

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  knip.json  package.json  pnpm-lock.yaml
.github/workflows/: benchmark.yml  ci.yml  release.yml
.sampo/: changeset.md.example  config.toml
.sampo/changesets/: cantankerous-bard-loviatar.md  cantankerous-stormcaller-tuonetar.md  chivalrous-lady-tapio.md  doughty-thunderbearer-loviatar.md  fabled-firebringer-aino.md  feat-visitor-parent-access.md  fix-ctx-source-string-heap-leak.md  fix-data-setproperty-paragraph.md  fix-rebuild-empty-string-remap.md  gallant-lady-tapio.md  grumpy-queen-loviatar.md  honor-hdata.md  jovial-runesinger-tursas.md  multi-patch-rebuild.md  rename-enable-directive.md  republish-pulldown-cmark-with-decode-entities.md  resolute-runesinger-ahti.md  restore-optional-deps.md  valiant-shaman-ukko.md  venerable-seer-ahti.md  virtuous-bard-vainamoinen.md  virtuous-duke-erika.md
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: pipeline.rs
crates/bench/src/: profile_parse.rs
crates/hast/: Cargo.toml
crates/hast/src/: codec.rs  convert.rs  from_binary.rs  lib.rs  node.rs  node_types.rs  serialize.rs  to_binary.rs
crates/hast/tests/: binary_roundtrip.rs  convert.rs  html.rs  serialize.rs
crates/mdast-arena/: Cargo.toml  README.md
crates/mdast-arena/src/: arena.rs  builder.rs  codec.rs  commands.rs  lib.rs  line_index.rs  mdx_types.rs  node.rs  raw_buffer.rs  read_arena.rs  rebuild.rs
crates/mdast-arena/tests/: arena_construction.rs  line_index.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/mdxjs-rs/: Cargo.toml
crates/mdxjs-rs/examples/: lib.rs
crates/mdxjs-rs/src/: arena_to_hast.rs  hast.rs  hast_util_to_oxc.rs  lib.rs  mdast_to_hast.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  oxc.rs  oxc_util_build_jsx.rs  oxc_utils.rs
crates/mdxjs-rs/tests/: arena_to_hast.rs  mdast_to_hast.rs  test.rs
crates/napi-binding/: Cargo.toml  README.md
crates/napi-binding/src/: lib.rs
crates/parser/: Cargo.toml  README.md
crates/parser/examples/: parse_docs.rs
crates/parser/src/: lib.rs
crates/parser/tests/: integration.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: commands.rs  context.rs  data.rs  lib.rs  plugin.rs  runner.rs  typed_nodes.rs
crates/plugin-api/tests/: commands.rs  data.rs  plugin_basics.rs  rebuild_integration.rs  runner.rs
crates/pulldown-cmark/: Cargo.toml  LICENSE
crates/pulldown-cmark/src/: firstpass.rs  html.rs  lib.rs  parse.rs  scanners.rs
crates/pulldown-cmark/tests/: errors.rs  html.rs  mdx.rs  serde.rs
crates/satteri/: CHANGELOG.md  Cargo.toml
crates/satteri-arena/: CHANGELOG.md  Cargo.toml
crates/satteri-arena/src/: arena.rs  builder.rs  codec.rs  lib.rs  line_index.rs  node.rs  raw_buffer.rs
crates/satteri-ast/: CHANGELOG.md  Cargo.toml
crates/satteri-ast/src/: commands.rs  convert.rs  rebuild.rs
crates/satteri-ast/src/hast/: mod.rs  properties.rs  render.rs
crates/satteri-ast/src/mdast/: codec.rs
crates/satteri-ast/tests/: convert_positions.rs  html.rs  rebuild.rs
crates/satteri-hast/: Cargo.toml  README.md
crates/satteri-hast/src/: codec.rs  convert.rs  lib.rs  render.rs  text_content.rs
crates/satteri-hast/tests/: html.rs
crates/satteri-mdast/: Cargo.toml  README.md
crates/satteri-mdast/src/: codec.rs  commands.rs  lib.rs  rebuild.rs  walk.rs
crates/satteri-mdast/tests/: arena_construction.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/satteri-mdxjs-rs/: CHANGELOG.md  Cargo.toml  license
crates/satteri-mdxjs-rs/examples/: lib.rs
crates/satteri-mdxjs-rs/src/: configuration.rs  hast_util_to_oxc.rs  lib.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  oxc.rs  oxc_util_build_jsx.rs  oxc_utils.rs
crates/satteri-mdxjs-rs/tests/: test.rs
crates/satteri-napi-binding/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-napi-binding/src/: lib.rs
crates/satteri-plugin-api/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-plugin-api/src/: commands.rs  context.rs  data.rs  js_commands.rs  lib.rs  plugin.rs  runner.rs  typed_nodes.rs
crates/satteri-plugin-api/tests/: commands.rs  data.rs  plugin_basics.rs  rebuild_integration.rs  runner.rs
crates/satteri-pulldown-cmark/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/satteri-pulldown-cmark/specs/: regression.txt  strikethrough.txt  table.txt
crates/satteri-pulldown-cmark/src/: arena_build.rs  firstpass.rs  html.rs  lib.rs  mdx.rs  parse.rs  post_passes.rs  scanners.rs  strings.rs  utils.rs
crates/satteri-pulldown-cmark/tests/: commonmark_spec_json.rs  errors.rs  html.rs  lib.rs  math_granular.rs  mdx.rs  serde.rs
crates/satteri-pulldown-cmark/tests/suite/: regression.rs  strikethrough.rs  table.rs
crates/satteri/src/: lib.rs
crates/tryckeri/: Cargo.toml
crates/tryckeri-arena/src/: arena.rs  builder.rs  lib.rs  line_index.rs  raw_buffer.rs
crates/tryckeri-hast/: Cargo.toml  README.md
crates/tryckeri-hast/src/: codec.rs  convert.rs  from_binary.rs  html.rs  lib.rs  node.rs  node_types.rs  serialize.rs  text_content.rs  to_binary.rs
crates/tryckeri-hast/tests/: convert.rs  (+2 more)
crates/tryckeri-mdast/: Cargo.toml  README.md
crates/tryckeri-mdxjs-rs/: Cargo.toml  readme.md
crates/tryckeri-napi-binding/: Cargo.toml
crates/tryckeri-napi-binding/src/: lib.rs
crates/tryckeri-parser/: Cargo.toml
crates/tryckeri-plugin-api/: Cargo.toml
crates/tryckeri-pulldown-cmark/: Cargo.toml  README.md
crates/tryckeri/src/: lib.rs
js/: package.json  vitest.config.ts
js/bench/: pipeline.bench.ts  remark.bench.ts
js/scripts/: parse-docs.mjs
js/src/: arena-reader.ts  data-map.ts  hast-materializer.ts  hast-reader.ts  hast-visitor.ts  index.ts  materializer.ts  parse.ts  pipeline.ts  plugin.ts  processor.ts  types.ts  visitor.ts
js/test/: arena-reader.test.ts  data-map.test.ts  fixtures.ts  materializer.test.ts  pipeline.test.ts  plugin.test.ts  plugins.test.ts  processor.test.ts  visitor.test.ts
(+57 files in other folders)
