[workspace]
members = [
  "crates/mdast-arena",
  "crates/bench",
  "crates/hast",
  "crates/parser",
  "crates/napi-binding",
  "crates/plugin-api",
  "crates/mdxjs-rs",
  "crates/pulldown-cmark",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.profiling]
inherits = "release"
strip = false
debug = true
panic = "unwind"

[workspace.dependencies]
oxc_allocator = "0.121.0"
oxc_ast = "0.121.0"
oxc_codegen = "0.121.0"
oxc_parser = "0.121.0"
oxc_span = "0.121.0"
oxc_syntax = "0.121.0"
