[workspace]
resolver = "2"
members = [
  "crates/bench",
  "crates/satteri",
  "crates/satteri-arena",
  "crates/satteri-ast",
  "crates/satteri-mdxjs-rs",
  "crates/satteri-napi-binding",
  "crates/satteri-plugin-api",
  "crates/satteri-pulldown-cmark",
]

[workspace.dependencies]
memchr = { version = "2.5", default-features = false }
oxc_allocator = "0.121.0"
oxc_ast = "0.121.0"
oxc_ast_visit = "0.121.0"
oxc_codegen = "0.121.0"
oxc_estree = "0.121.0"
oxc_parser = "0.121.0"
oxc_span = "0.121.0"
oxc_syntax = "0.121.0"
rustc-hash = "2"
satteri-arena = { path = "crates/satteri-arena", version = "0.2.0" }
satteri-ast = { path = "crates/satteri-ast", version = "0.2.7" }
satteri-mdxjs = { path = "crates/satteri-mdxjs-rs", version = "0.2.3" }
satteri-plugin-api = { path = "crates/satteri-plugin-api", version = "0.1.13" }
satteri-pulldown-cmark = {
  path = "crates/satteri-pulldown-cmark",
  version = "0.4.1"
}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-id-start = "1"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
panic = "unwind"
