[package]
name = "tryckeri-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "pipeline"
harness = false

[[bin]]
name = "profile_parse"
path = "src/profile_parse.rs"


[dependencies]
tryckeri-pulldown-cmark = { path = "../tryckeri-pulldown-cmark" }

[dev-dependencies]
divan = "0.1"
tryckeri-hast = { path = "../tryckeri-hast" }
tryckeri-mdxjs = { path = "../tryckeri-mdxjs-rs" }
oxc_allocator = { workspace = true }
rustc-hash = "2"
tryckeri-pulldown-cmark = { path = "../tryckeri-pulldown-cmark" }
