[dependencies]
mdast-arena = { path = "../mdast-arena" }
parser = { path = "../parser" }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
serializable = []

[package]
authors = ["Titus Wormer <tituswormer@gmail.com>"]
categories = ["compilers", "text-processing"]
description = "Compile MDX to JavaScript in Rust."
edition = "2024"
homepage = "https://github.com/wooorm/mdxjs-rs"
include = ["license", "src/"]
keywords = ["compile", "markdown", "mdx"]
license = "MIT"
name = "mdxjs"
repository = "https://github.com/wooorm/mdxjs-rs"
rust-version = "1.91.0"
version = "1.0.4"
