[package]
name = "tryckeri-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mdast-arena = { path = "../mdast-arena" }
tryckeri-hast = { path = "../hast" }
mdxjs = { path = "../mdxjs-rs" }
parser = { path = "../parser" }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "1"
