[package]
name = "satteri-ast"
version = "0.2.7"
edition = "2021"
description = "MDAST and HAST node types, codecs, tree operations, and conversion for Sätteri"
license = "MIT"

[dependencies]
pulldown-cmark-escape = "0.11"
rustc-hash = { workspace = true }
satteri-arena = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
satteri-pulldown-cmark = { path = "../satteri-pulldown-cmark" }
