[package]
name = "satteri-napi"
version = "0.2.3"
edition = "2021"
description = "NAPI bindings exposing the Sätteri pipeline to Node.js"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
satteri-arena = { workspace = true }
satteri-ast = { workspace = true }
satteri-mdxjs = { workspace = true }
satteri-plugin-api = { workspace = true }
satteri-pulldown-cmark = { workspace = true }

[build-dependencies]
napi-build = "2"
