[package]
name = "satteri-pulldown-cmark"
version = "0.2.3"
authors = ["Raph Levien <raph.levien@gmail.com>", "Marcus Klaas de Vries <mail@marcusklaas.nl>", "Bruits"]
license = "MIT"
description = "A fork of the pulldown-cmark crate with MDX extensions, used in the satteri project."
edition = "2021"

build = "build.rs"

[dependencies]
bitflags = "2"
unicase = "2.6"
memchr = { version = "2.5", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
pulldown-cmark-escape = { version = "0.11", optional = true }
rustc-hash = "2"
satteri-arena = { version = "0.1.2", path = "../satteri-arena" }
satteri-ast = { version = "0.1.3", path = "../satteri-ast" }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

[features]
default = ["std", "html"]
std = ["memchr/std"]
simd = ["pulldown-cmark-escape?/simd"]
html = ["pulldown-cmark-escape"]
gen-tests = ["std"]
