[package]
name = "satteri"
version = "0.1.0"
edition = "2021"
description = "High-level Rust API for the Sätteri markdown/MDX pipeline"

[dependencies]
satteri-mdast = { path = "../satteri-mdast" }
satteri-hast = { path = "../satteri-hast" }
satteri-mdxjs = { path = "../satteri-mdxjs-rs" }
satteri-pulldown-cmark = { path = "../satteri-pulldown-cmark" }
