[package]
name = "satteri"
version = "0.1.7"
edition = "2021"
description = "High-level Rust API for the Sätteri markdown/MDX pipeline"
license = "MIT"

[dependencies]
satteri-ast = { version = "0.1.3", path = "../satteri-ast" }
satteri-mdxjs = { version = "0.1.7", path = "../satteri-mdxjs-rs" }
satteri-pulldown-cmark = { version = "0.2.3", path = "../satteri-pulldown-cmark" }
