[package]
name = "tryckeri-napi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tryckeri-arena = { path = "../tryckeri-arena" }
tryckeri-mdast = { path = "../tryckeri-mdast" }
tryckeri-hast = { path = "../tryckeri-hast" }
tryckeri-mdxjs = { path = "../tryckeri-mdxjs-rs" }
tryckeri-pulldown-cmark = { path = "../tryckeri-pulldown-cmark" }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
